<resources>
    <string name="app_name">Welcome to Tudors! We are here to help you</string>
    <string name="passwordInput"> Enter Password </string>
    <string name="usernameInput"> Enter Username</string>
    <string name="btnLogin"> Login </string>
    <string name="btnCreateAccount"> Create Account</string>
    <string name="new_to_tudor">New To Tudor?</string>
    <string name="forgotInfo">Forgot Username/Password</string>
    <string name="subject">Subject</string>
    <string name="your_subject">Your Subject</string>
    <string name="location">Location</string>
    <string name="your_location">Your Location</string>
    <string name="use_gps_for_location">Use GPS for Location</string>
    <string name="btnEditProfile">Edit Profile</string>
    <string name="btnFindMatches">Find Matches</string>
    <!--Temporary Subjects-->
    <string-array name="subjects_array">
        <item>Math</item>
        <item>Physics</item>
        <item>History</item>
        <item>English</item>
    </string-array>
    <string name="title_activity_scrolling_new_user_screen">ScrollingActivityNewUserScreen</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="city_or_town">City/Town or Online</string>
    <string name="telephone">Telephone</string>
    <string name="email">Email</string>
    <string name="choose_a_subject">Choose a Subject</string>
    <string name="select_your_role">Select Your Role</string>
    <string name="student">Student</string>
    <string name="tutor">Tutor</string>
    <string name="save">SAVE</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_a_new_user_profile">Create a new user profile:</string>
    <string name="tutor_and_student">Tutor and student graphic</string>
    <string name="edit_your_user_profile">Edit your user profile</string>
    <string name="change_your_subject_here">Change Your Subject Here</string>
    <string name="change_your_role_here">Change Your Role Here</string>
    <string name="delete_profile">DELETE PROFILE</string>
    <string name="tutor_name">Tutor Name</string>
    <string name="tutor_email">Tutor Email</string>
    <string name="tutor_phone_number">Tutor Phone Number</string>
    <string name="tutor_subject">Tutor Subject</string>
    <string name="confirm_match">Confirm Match</string>
</resources>
