<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="310dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/usernameInput"
        android:inputType="textPersonName"
        android:drawableStart="@drawable/ic_action_username"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="360dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/passwordInput"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_action_password"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="410dp"
        android:background="?android:attr/textColorHighlight"
        android:text="@string/btnLogin"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewNewTudor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="540dp"
        android:text="@string/new_to_tudor"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.124" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="133dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="87dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/btnCreateAccount"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNewTudor"
        app:layout_constraintVertical_bias="0.308" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="118dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="93dp"
        android:contentDescription="TODO"
        app:srcCompat="@drawable/mainscreen" />

    <CheckedTextView
        android:id="@+id/checkedTVForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="470dp"
        android:text="@string/forgotInfo"
        android:textColor="@android:color/background_dark" />

</RelativeLayout>